fixed spacing issues between sections on index.html

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -142,7 +142,7 @@ text-align: center;display: block; margin: 0 auto}*/
 .first-dibs-project img {  display: block;margin: 0 auto;width: 80%;}
 
 .pack {background-color:#21B179}
-.pack h2 {max-width: 960px; }
+.pack h2 {max-width: 960px; padding-top: 0}
 .pack h3 {max-width: 980px; margin-bottom: 50px}
 .pack-project {padding-top: 60px;padding-bottom: 140px;}
 .pack-project img { display: block;margin: 0 auto;width: 80%; margin-top: 40px}
@@ -313,7 +313,6 @@ text-align: center;display: block; margin: 0 auto}*/
     .main-section {padding-left: 20px; padding-right: 20px; padding-top: 60px}
     .yelp-project {padding-bottom: 60px}
     .yelp-project img {width: 95%}
-    .yelp h3 {margin-bottom: 20px}
     .first-dibs-project img {width: 100%}
     .pack-project img {width: 95%}
 
@@ -322,7 +321,6 @@ text-align: center;display: block; margin: 0 auto}*/
         margin-right: 0;}
     .animations-project img {width: 33.3%;}
     .center-animation {margin-left: 0; margin-right: 0}
-    .pack-project {    padding-bottom: 60px;}
     .first-dibs-project { padding-bottom: 60px;}
 
     .mobile-nav-dropdown {width: 100%; background-color: #fff;  border-top: 1px solid #e4e4e4;     position: absolute; }
@@ -331,6 +329,12 @@ text-align: center;display: block; margin: 0 auto}*/
 
     .large-project {width: 90%}
 
+    /*.designs-project {padding-top: 60px;padding-bottom: 90px; margin-left: 3%; margin-right: 3%;}*/
+    /*.pack-project {padding-top: 60px;padding-bottom: 90px;}*/
+    /*.writing-project {padding-top: 60px;padding-bottom: 90px; margin-left: 3%; margin-right: 3%;}*/
+    .pack h2 {max-width: 960px; padding-top: 50px}
+    .designs h2 {max-width: 750px; padding-top: 50px; padding-bottom: 0; color: #fff }
+    .writing h2 {max-width: 750px; padding-top: 60px; padding-bottom: 0; color: #fff }
 }
 
 @media only screen and (min-width:1000px) {
